change some minor styles on quiz

--- a/css/styles.css
+++ b/css/styles.css
@@ -17,3 +17,12 @@
 .userName {
   margin-bottom:.4em;
 }
+
+.sdr {
+  font-size:4em;
+  text-align:center;
+}
+
+.theQuiz {
+  text-align:center;
+}
