--- a/css/styles.css
+++ b/css/styles.css
@@ -18,11 +18,18 @@
   margin-bottom:.4em;
 }
 
-.sdr {
-  font-size:4em;
+.title {
   text-align:center;
+}
+
+.sdr {
+    font-size:4em;
 }
 
 .theQuiz {
   text-align:center;
+}
+
+.interview {
+  font-size:1.5em;
 }
