--- a/css/styles.css
+++ b/css/styles.css
@@ -2,35 +2,106 @@
   box-sizing: border-box;
 }
 
+body {
+  /*background-image: url(./animalCollective.jpg);*/
+  font-family: Verdana;
+}
+
+#root {
+  z-index: 5;
+}
+
+.background {
+  position:fixed;
+  margin: 0;
+  z-index:1;
+  opacity:0.7;
+    /* Set rules to fill background */
+  min-height: 100%;
+  min-width: 1024px;
+
+  /* Set up proportionate scaling */
+  width: 100%;
+  height: auto;
+
+  /* Set up positioning */
+  top: 0;
+  left: 0;
+}
+
+form {
+    margin: none;
+    border: 3px solid #f1f1f1;
+}
+
+input[type=text], input[type=password] {
+    width: 100%;
+    padding: 12px 20px;
+    margin: 8px 0;
+    display: inline-block;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    box-sizing: border-box;
+    font-size: 20px;
+}
+
 .innerBox {
-    position: absolute;
-    width: 300px;
-    margin-top: 300px;
-    margin-left: 40%;
+    position: relative;
+    width: 400px;
+    height: 315px;
+    margin: 25% auto;
     box-sizing: border-box;
     /*font-family: 'Ubuntu Light', 'Century Gothic', sans-serif;*/
     color: #393939;
     background-color: #FFF;
     /*max-width: 12em;*/
     padding: 10px;
-    box-shadow: 10px 15px 39px rgba(0, 0, 0, .2);
-    border-radius: 5px;
+    /*box-shadow: 10px 15px 39px rgba(0, 0, 0, .2);*/
+    border: 2px solid orange;
+    border-radius: 10px;
+    background-color: #EEEEEE;
 }
 
 .loginWrapper {
   position: relative;
   width: 100%;
-  background-color: orange;
   /*border: 1px solid blue;*/
-}
-
-.but {
-  width:90%;
-  margin-top:.4em;
 }
 
 .userName {
   margin-bottom:.4em;
+}
+
+.pword {
+  margin-bottom:.4em;
+}
+
+.but {
+    background-color: #4CAF50;
+    color: white;
+    padding: 14px 20px;
+    margin: 8px 0;
+    border: 1px solid #4CAF50;
+    border-radius: 5px;
+    cursor: pointer;
+    width: 100%;
+    font-size: 20px;
+  /*margin-top:.4em;*/
+}
+
+.but:hover {
+  opacity: 0.5;
+}
+
+#register {
+  background-color: white;
+  color: #4CAF50;
+  border: 1px solid white;
+}
+
+#register:hover {
+/*  background-color: #4CAF50;
+  color: white;*/
 }
 
 .title {
@@ -44,7 +115,7 @@
 }
 
 .theQuiz {
-  background-color: #FCF4F7;
+  background-color: #eee;
   /*border: 1px solid green;*/
   padding: 10px;
   margin: 2.5em 2.5em;
@@ -53,15 +124,13 @@
 .questionText {
   font-size: 30px;
   font-weight: bold;
-  background-color: green;
+  /*background-color: green;*/
   margin-left: 2.5%;
 }
 .interview {
   font-size:1.5em;
 }
-.pword {
-  margin-bottom:.4em;
-}
+
 .score {
   color: green;
 }
