--- a/css/styles.css
+++ b/css/styles.css
@@ -7,11 +7,13 @@ body {
   font-family: Verdana;
 }
 
-#root {
-  z-index: 5;
+.app {
+  /*z-index: 2;*/
 }
 
 .background {
+  display: flex;
+  flex-direction: column;
   position:fixed;
   margin: 0;
   z-index:1;
@@ -53,18 +55,18 @@ input[type=text], input[type=password] {
     box-sizing: border-box;
     /*font-family: 'Ubuntu Light', 'Century Gothic', sans-serif;*/
     color: #393939;
-    background-color: #FFF;
     /*max-width: 12em;*/
     padding: 10px;
     /*box-shadow: 10px 15px 39px rgba(0, 0, 0, .2);*/
-    border: 2px solid orange;
+    border: 2px solid #EEE;
     border-radius: 10px;
-    background-color: #EEEEEE;
+    background-color: #EEE;
 }
 
 .loginWrapper {
   position: relative;
   width: 100%;
+  z-index: 2;
   /*border: 1px solid blue;*/
 }
 
@@ -115,18 +117,26 @@ input[type=text], input[type=password] {
 }
 
 .theQuiz {
-  background-color: #eee;
-  /*border: 1px solid green;*/
+  color: white;
+  background-color: rgb(51, 51, 51);
+  border: 1px solid rgba(0, 144, 247, .7);
+  border-radius: 10px;
   padding: 10px;
   margin: 2.5em 2.5em;
+  z-index: 3;
 }
 
 .questionText {
   font-size: 30px;
-  font-weight: bold;
+  font-weight: 400;
   /*background-color: green;*/
   margin-left: 2.5%;
 }
+
+.completedMessage {
+  margin-left: 2.5%;
+}
+
 .interview {
   font-size:1.5em;
 }
