--- a/css/styles.css
+++ b/css/styles.css
@@ -8,16 +8,21 @@ body {
   background-color: #4CAF50;
 }
 
+#root {
+  width: 100%;
+  height: 100%;
+}
+
 .app {
   /*z-index: 2;*/
 }
 
 .background {
+  z-index:1;
   display: flex;
   flex-direction: column;
   position:fixed;
   margin: 0;
-  z-index:1;
   opacity:0.7;
     /* Set rules to fill background */
   min-height: 100%;
@@ -80,11 +85,11 @@ input[type=text], input[type=password] {
 }
 
 .but {
-    background-color: #4CAF50;
+    background-color: #00A3CA; /*#4CAF50;*/
     color: white;
     padding: 14px 20px;
     margin: 8px 0;
-    border: 1px solid #4CAF50;
+    border: 1px solid #00A3CA; /*#4CAF50;*/
     border-radius: 5px;
     cursor: pointer;
     width: 100%;
@@ -128,7 +133,10 @@ input[type=text], input[type=password] {
   border-radius: 10px;
   padding: 10px;
   margin: 2.5em 2.5em;
-  z-index: 3;
+}
+
+.questionWrapper {
+  color: #eee;
 }
 
 .questionText {
@@ -136,6 +144,7 @@ input[type=text], input[type=password] {
   font-weight: 400;
   /*background-color: green;*/
   margin-left: 2.5%;
+  color: #eee;
 }
 
 .completedMessage {
