added retake quiz button

--- a/css/styles.css
+++ b/css/styles.css
@@ -5,7 +5,7 @@
 body {
   /*background-image: url(./animalCollective.jpg);*/
   font-family: Verdana;
-  background-color: #4CAF50;
+  background-color: #00A3CA;
 }
 
 #root {
@@ -103,12 +103,12 @@ input[type=text], input[type=password] {
 
 #register {
   background-color: white;
-  color: #4CAF50;
+  color: #00A3CA;
   border: 1px solid white;
 }
 
 #register:hover {
-/*  background-color: #4CAF50;
+/*  background-color: #00A3CA;
   color: white;*/
 }
 
@@ -127,6 +127,7 @@ input[type=text], input[type=password] {
 }
 
 .theQuiz {
+  height: 800px;
   color: white;
   background-color: rgb(51, 51, 51);
   border: 1px solid rgba(0, 144, 247, .7);
@@ -147,8 +148,29 @@ input[type=text], input[type=password] {
   color: #eee;
 }
 
+.retakeBtn {
+  padding: 14px 20px;
+  margin: 12px auto;
+  display: block;
+  background-color: #00A3CA; /*#4CAF50;*/
+  color: white;
+  border: 1px solid #00A3CA; /*#4CAF50;*/
+  border-radius: 5px;
+  cursor: pointer;
+  width: 80%;
+  font-size: 20px;
+}
+
 .completedMessage {
-  margin-left: 2.5%;
+  margin: 10% 2.5%;
+  /*margin-left: 2.5%;*/
+  display: block;
+}
+
+.completedMessage h2 {
+  width: 100%;
+  margin: auto;
+  text-align: center;
 }
 
 .interview {
@@ -156,5 +178,5 @@ input[type=text], input[type=password] {
 }
 
 .score {
-  color: green;
+  color: #4CAF50;
 }
