--- a/css/styles.css
+++ b/css/styles.css
@@ -134,7 +134,7 @@ input[type=text], input[type=password] {
   border: 1px solid rgba(0, 144, 247, .7);
   border-radius: 5px;
   padding: 10px;
-  margin: 2.5em 2.5em;
+  margin: 2.5% 2.5%;
 }
 
 .questionWrapper {
@@ -150,8 +150,10 @@ input[type=text], input[type=password] {
 }
 
 .feedbackMsg {
-  margin: 10px 2.5%;
-  position: absolute;
+  margin: 0px 2.5%;
+  position: relative;
+  text-align: center;
+  font-size: 3em;
 }
 
 #correctMsg {
