--- a/css/styles.css
+++ b/css/styles.css
@@ -15,7 +15,7 @@ body {
 }
 
 .background {
-  background-image: url("brain.png");
+  /*background-image: url("brain.png");*/
   background-repeat: repeat;
   resize: both;
   z-index:-1;
@@ -31,7 +31,7 @@ body {
   /* Set up proportionate scaling */
   width: 100%;
   height: 100%;
-  max-height: 10000px;
+  /*max-height: 10000px;*/
 
   /* Set up positioning */
   top: 0;
